{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 411,
  "lineage": "f31b20d9-d182-905d-5f5d-56d6964fd20f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068257025f72f470d",
            "arn": "arn:aws:ec2:ap-south-1:839590619444:instance/i-094ad89d30a8d5b64",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094ad89d30a8d5b64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02dcb86437f9940c7"
              }
            ],
            "primary_network_interface_id": "eni-02dcb86437f9940c7",
            "private_dns": "ip-10-0-0-84.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.84",
            "public_ip": "13.127.161.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0314fb83e69ddb516",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e836a78eea45aa1",
            "tags": {
              "name": "demo"
            },
            "tags_all": {
              "name": "demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6163a617f3d304d"
            ]
          },
          "dependencies": [
            "aws_network_interface.production-ni",
            "aws_security_group.madu",
            "aws_subnet.production-subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:internet-gateway/igw-0d83429b23dc1b002",
            "id": "igw-0d83429b23dc1b002",
            "owner_id": "839590619444",
            "vpc_id": "vpc-00442ac9a11d0eb08"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:839590619444:loadbalancer/app/test-lb-tf/a99a357a6f257c14",
            "arn_suffix": "app/test-lb-tf/a99a357a6f257c14",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-624974359.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:839590619444:loadbalancer/app/test-lb-tf/a99a357a6f257c14",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0d6163a617f3d304d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e836a78eea45aa1"
              },
              {
                "subnet_id": "subnet-065be8486843c3cb4"
              }
            ],
            "subnets": [
              "subnet-05e836a78eea45aa1",
              "subnet-065be8486843c3cb4"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-00442ac9a11d0eb08",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_subnet.production-subnet",
            "aws_subnet.production-subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:839590619444:targetgroup/tf-example-lb-tg/c21fb6b9e7c48fec",
            "arn_suffix": "targetgroup/tf-example-lb-tg/c21fb6b9e7c48fec",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:839590619444:targetgroup/tf-example-lb-tg/c21fb6b9e7c48fec",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00442ac9a11d0eb08"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:839590619444:targetgroup/tf-example-lb-tg/c21fb6b9e7c48fec-20220705154548091700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:839590619444:targetgroup/tf-example-lb-tg/c21fb6b9e7c48fec",
            "target_id": "i-094ad89d30a8d5b64"
          },
          "dependencies": [
            "aws_instance.myinstance",
            "aws_lb_target_group.test",
            "aws_network_interface.production-ni",
            "aws_security_group.madu",
            "aws_subnet.production-subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "production-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:network-interface/eni-02dcb86437f9940c7",
            "attachment": [
              {
                "attachment_id": "eni-attach-05b0618a3f3c571c0",
                "device_index": 0,
                "instance": "i-094ad89d30a8d5b64"
              }
            ],
            "id": "eni-02dcb86437f9940c7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:79:40:6e:3c:3a",
            "owner_id": "839590619444",
            "private_ip": "10.0.0.84",
            "private_ip_list": [
              "10.0.0.84"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.84"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d6163a617f3d304d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e836a78eea45aa1"
          },
          "dependencies": [
            "aws_security_group.madu",
            "aws_subnet.production-subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:route-table/rtb-0fdb4dc17518fc1ad",
            "id": "rtb-0fdb4dc17518fc1ad",
            "owner_id": "839590619444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.5.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d83429b23dc1b002",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-00442ac9a11d0eb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbd790fb3d14be1c",
            "route_table_id": "rtb-0fdb4dc17518fc1ad",
            "subnet_id": "subnet-05e836a78eea45aa1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.production-subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "madu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:security-group/sg-0d6163a617f3d304d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6163a617f3d304d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "madu",
            "name_prefix": "",
            "owner_id": "839590619444",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "tags_all": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00442ac9a11d0eb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:subnet/subnet-05e836a78eea45aa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e836a78eea45aa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839590619444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-subenet"
            },
            "tags_all": {
              "Name": "production-subenet"
            },
            "vpc_id": "vpc-00442ac9a11d0eb08"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:subnet/subnet-065be8486843c3cb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065be8486843c3cb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839590619444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-subenet"
            },
            "tags_all": {
              "Name": "production-subenet"
            },
            "vpc_id": "vpc-00442ac9a11d0eb08"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839590619444:vpc/vpc-00442ac9a11d0eb08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01638d90bfb99bca0",
            "default_route_table_id": "rtb-0a7772d820932fb26",
            "default_security_group_id": "sg-020386a6d40b4670f",
            "dhcp_options_id": "dopt-08283db96c3377483",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00442ac9a11d0eb08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7772d820932fb26",
            "owner_id": "839590619444"
          }
        }
      ]
    }
  ]
}